--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 
 # Created by https://www.gitignore.io/api/node,macos,linux,windows,webstorm,visualstudiocode
 
+### The python virtual environment
+.venv
+.idea
+
 ### Linux ###
 *~
 
